Fix planet statistics margin on tablet view

--- a/src/components/planet/planet-statistics/PlanetStatistics.scss
+++ b/src/components/planet/planet-statistics/PlanetStatistics.scss
@@ -34,9 +34,9 @@
 
 @media all and (min-width: 630px) {
     .planet-statistics-list {
- 
         flex-direction: row;
         justify-content: center;
+        margin: 0px 40px;
 
         .planet-statistics { 
             flex-direction: column;
@@ -49,12 +49,8 @@
             }
         }
 
-        .planet-statistics:first-of-type {
-            margin-left: 11px;
-        }
-
         .planet-statistics:last-of-type {
-            margin-right: 11px;
+            margin-right: 0px;
         }
     }
 }
